<?xml version="1.0"?>
<package format="3">
  <name>imu_calibration</name>
  <version>0.0.0</version>
  <description>The imu_calibration package</description>
  <maintainer email="tacchan.mello.ioiq@gmail.com">Tatsuro Sakaguchi</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/Tacha-S/imu_calibration</url>
  <url type="bugtracker">https://github.com/Tacha-S/imu_calibration/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-pip</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>

  <export/>
</package>
