<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_calibration</name>
  <version>0.0.0</version>
  <description>The imu_calibration package</description>
  <maintainer email="tacchan.mello.ioiq@gmail.com">Tatsuro Sakaguchi</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/Tacha-S/imu_calibration</url>
  <url type="bugtracker">https://github.com/Tacha-S/imu_calibration/issues</url>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
